# GPUMD

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  POSCAR  README.md  atom.cu  bibtex.bib  common.cuh  dump_netcdf.cu  ensemble_nhc.cu  fcp.cuh  force.cu  force.cuh  heat.cu  initialize.cu  lattice_inv.cu  main.cu  makefile  makefile.phonon  model.xyz  neighbor.cu  pair.cu  parse.cu  phonon.cu  readme.md  rebo_mos2.cu  run.cu  sw.cu  vashishta.cu  vashishta.cuh  velocity.cu
src/: .clang-format  @  CMakeLists.txt  apply_clang_format.sh  atom.cu  atom.cuh  box.cu  box.cuh  check_run.cu  common.cu  common.cuh  common.h  compute.cu  compute.cuh  cusolver_wrapper.cu  cusolver_wrapper.cuh  dos.cu  dos.cuh  dump.cu  dump.cuh  dump_netcdf.cu  dump_netcdf.cuh  dump_pos.cuh  dump_positions.cu  dump_positions.cuh  dump_xyz.cu  dump_xyz.cuh  eam.cu  eam.cuh  eam_analytical.cu  eam_analytical.cuh  eam_dai_2006.cu  eam_dai_2006.cuh  eam_zhou_2004.cu  eam_zhou_2004.cuh  ensemble.cu  ensemble.cuh  ensemble.inc  ensemble_bdp.cu  ensemble_bdp.cuh  (+157 more)
src/cavity/: atom_cavity.cuh  cavity.cu  cavity.cuh  neighbor_cavity.cu  neighbor_cavity.cuh  nep3_cavity.cu  nep3_cavity.cuh  nep3_float.cu  nep3_float.cuh  nep3_small_box_cavity.cuh  nep3_small_box_float.cuh  nep_utilities_double.cuh  potential_cavity.cu  potential_cavity.cuh  potential_float.cu  potential_float.cuh
src/extrapolation_grade/: extrapolation.cu  extrapolation.cuh
src/force/: _kiss_fft_guts.cuh  adp.cu  adp.cuh  deepmd.cu  deepmd.cuh  dftd3.cu  dftd3.cuh  dftd3para.cuh  dp.cu  dp.cuh  eam.cu  eam.cuh  eam_alloy.cu  eam_alloy.cuh  ewald.cu  ewald.cuh  fcp.cu  fcp.cuh  force.cu  force.cuh  force_constant.cu  force_constant.cuh  gas-metad.cu  gas-metad.cuh  gas-ps.cu  gas-ps.cuh  hotpp.cu  hotpp.cuh  ilp.cu  ilp.cuh  ilp_nep.cu  ilp_nep.cuh  ilp_nep_gr_hbn.cu  ilp_nep_gr_hbn.cuh  ilp_nep_tmd.cu  ilp_nep_tmd.cuh  ilp_tersoff.cu  ilp_tersoff.cuh  ilp_tmd.cu  ilp_tmd.cuh  (+56 more)
src/gpumd/: main.cu
src/integrate/: ensemble.cu  ensemble.cuh  ensemble_bao.cu  ensemble_bao.cuh  ensemble_bdp.cu  ensemble_bdp.cuh  ensemble_ber.cu  ensemble_ber.cuh  ensemble_heat_hybrid.cu  ensemble_heat_hybrid.cuh  ensemble_lan.cu  ensemble_lan.cuh  ensemble_mirror.cu  ensemble_mirror.cuh  ensemble_msst.cu  ensemble_msst.cuh  ensemble_mttk.cu  ensemble_mttk.cuh  ensemble_nh.cu  ensemble_nh.cuh  ensemble_nhc.cu  ensemble_nhc.cuh  ensemble_nph_qtb.cu  ensemble_nph_qtb.cuh  ensemble_nphug.cu  ensemble_nphug.cuh  ensemble_npt_qtb.cu  ensemble_npt_qtb.cuh  ensemble_npt_scr.cu  ensemble_npt_scr.cuh  ensemble_nve.cu  ensemble_nve.cuh  ensemble_pimd.cu  ensemble_pimd.cuh  ensemble_piston.cu  ensemble_piston.cuh  ensemble_qtb.cu  ensemble_qtb.cuh  ensemble_ti.cu  ensemble_ti.cuh  (+26 more)
src/main_gmlp/: adam.cu  adam.cuh  dataset.cu  fitness.cu  fitness.cuh  gmlp.cu  gmlp.cuh  main.cu  parameters.cu  parameters.cuh  potential.cuh  structure.cu
src/main_gnep/: adam.cu  adam.cuh  dataset.cu  dataset.cuh  fitness.cu  fitness.cuh  gnep.cu  gnep.cuh  gradients.cuh  main.cu  mic.cuh  parameters.cu  parameters.cuh  structure.cu  structure.cuh
src/main_gpumd/: add_efield.cu  add_efield.cuh  add_field.cu  add_force.cu  add_force.cuh  add_random_force.cu  add_random_force.cuh  add_restorative_force.cu  add_restorative_force.cuh  add_spring.cu  add_spring.cuh  cohesive.cu  cohesive.cuh  deform_box.cuh  deposit.cu  deposit.cuh  deposition.cu  deposition.cuh  dlpack.h  electron_stop.cu  electron_stop.cuh  gpumd.cu  gpumd_python.cpp  gpumd_python_kernels.cu  gpumd_python_kernels.cuh  main.cu  mdi_stub.cu  replicate.cu  replicate.cuh  run.cu  run.cuh  velocity.cu  velocity.cuh
src/main_mdi/: add_efield.cu  add_efield.cuh  add_random_force.cuh  add_spring.cu  cohesive.cuh  electron_stop.cuh  main.cu  mdi_fallback.h  mdi_stub.cu  run.cu  run.cuh  velocity.cu  velocity.cuh
src/main_nep/: dataset.cu  dataset.cuh  error.cuh  fitness.cu  fitness.cuh  gpu_vector.cuh  main.cu  mic.cuh  neighbor.cu  neighbor.cuh  nep.cu  nep.cuh  nep1.cu  nep1.cuh  nep2.cu  nep2.cuh  nep3.cu  nep3.cuh  nep4.cu  nep4.cuh  nep5.cu  nep5.cuh  nep_charge.cu  nep_charge.cuh  nep_charge_vdw.cu  nep_charge_vdw.cuh  nep_vdw.cu  nep_vdw.cuh  parameters.cu  parameters.cuh  potential.cuh  snes.cu  snes.cuh  structure.cu  structure.cuh  tnep.cu  tnep.cuh
src/main_nep_adam/: adam.cu  adam.cuh  dataset.cu  dataset.cuh  fitness.cu  fitness.cuh  gradients.cuh  main.cu  mic.cuh  nep3.cu  nep3.cuh  parameters.cu  parameters.cuh  potential.cuh  snes.cuh  structure.cu  structure.cuh
src/main_neptb/: dataset.cu  dataset.cuh  fitness.cu  neptb.cu  neptb.cuh  parameters.cu  parameters.cuh  potential.cuh  snes.cu  snes.cuh  structure.cu  structure.cuh
src/main_phonon/: cusolver_wrapper.cu  cusolver_wrapper.cuh  hessian.cu  hessian.cuh  main_phonon.cu  phonon.cu  phonon.cuh
src/mc/: mc.cu  mc.cuh  mc_ensemble.cu  mc_ensemble.cuh  mc_ensemble_canonical.cu  mc_ensemble_canonical.cuh  mc_ensemble_sgc.cu  mc_ensemble_sgc.cuh  nep_energy.cu  nep_energy.cuh
src/mc_minimize/: mc_minimize.cu  mc_minimize.cuh  mc_minimizer.cu  mc_minimizer.cuh  mc_minimizer_global.cu  mc_minimizer_global.cuh  mc_minimizer_local.cu  mc_minimizer_local.cuh  mc_minimizer_test.cu  mc_minimizer_test.cuh
src/measure/: active.cu  active.cuh  adf.cu  adf.cuh  angular_rdf.cu  angular_rdf.cuh  cavity.cu  cavity.cuh  compute.cu  compute.cuh  compute_chunk.cu  compute_chunk.cuh  compute_dpdt.cu  compute_dpdt.cuh  compute_es.cu  compute_es.cuh  compute_heat.cu  compute_heat.cuh  cvac.cu  cvac.cuh  dos.cu  dos.cuh  dump_beads.cu  dump_beads.cuh  dump_cg.cu  dump_cg.cuh  dump_cgtrain.cu  dump_cgtrain.cuh  dump_dipole.cu  dump_dipole.cuh  dump_exyz.cu  dump_exyz.cuh  dump_force.cu  dump_force.cuh  dump_netcdf.cu  dump_netcdf.cuh  dump_observer.cu  dump_observer.cuh  dump_piston.cu  dump_piston.cuh  (+57 more)
src/minimize/: minimize.cu  minimize.cuh  minimizer.cu  minimizer.cuh  minimizer_fire.cu  minimizer_fire.cuh  minimizer_fire2.cu  minimizer_fire2.cuh  minimizer_fire_box_change.cu  minimizer_fire_box_change.cuh  (+2 more)
torchnep/: README.md  pyproject.toml
(+1877 files in other folders)
